# docassemble-RFApackage

./: MANIFEST.in  pyproject.toml  setup.py
docassemble/RFApackage/data/questions/: RFApackage.yml
docassemble/RFApackage/data/static/: style.css
docassemble/RFApackage/data/templates/: RFAaffidavit_addendum.docx  RFApackage_next_steps.docx
