[build-system]
requires = [
    "setuptools==80.9.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "docassemble.RFApackage"
version = "1.2"
description = "RFApackage"
readme = "README.md"
authors = [
    { name = "VTCourtForms by Legal Services Vermont", email = "ksurette@legalservicesvt.org" },
]
dependencies = [
    "docassemble.ALToolbox @ git+https://github.com/SuffolkLITLab/docassemble-ALToolbox.git@main",
    "docassemble.AssemblyLine @ git+https://github.com/SuffolkLITLab/docassemble-AssemblyLine.git@main",
    "docassemble.GithubFeedbackForm @ git+https://github.com/SuffolkLITLab/docassemble-GithubFeedbackForm.git@main",
    "docassemble.VTFeedback @ git+https://github.com/VTskier/docassemble-VTFeedback.git@main",
    "docassemble.VTSharedYMLFile @ git+https://github.com/LSVermont/docassemble-VTSharedYMLFile.git@main",
]
license = "MIT"
license-files = [
    "LICENSE",
]

[project.urls]
Homepage = "https://VTLawHelp.org"

[tool.setuptools.packages.find]
where = [
    ".",
]
